tests/bad_reserved_name_fn.stderr
tests/bad_reserved_name_fn.sl:3:11: error: identifier prefix '__sl_' is reserved
